# Simple-Vulkan-Renderer---Rust

./: .gitignore  Cargo.toml  README.md
shaders/: empty.frag  empty.frag.spv  phong.frag  phong.frag.spv  phong.h.glsl  phong.vert  phong.vert.spv  shadow_map.vert  shadow_map.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
src/: main.rs
ushio/: Cargo.toml
ushio-geom/: Cargo.toml
ushio-geom/src/: lib.rs  mat2.rs  mat3.rs  mat4.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
ushio/src/: color.rs  lib.rs
ushio/src/gfx/: buf.rs  convert.rs  cubemap.rs  img.rs  mod.rs  phong.rs  shadow.rs  trace.rs
ushio/src/scene/: camera.rs  gltf.rs  light.rs  material.rs  mesh.rs  mod.rs  node.rs  skybox.rs  trs.rs
