[package]
name = "rushio"
version = "0.1.0"
authors = ["tyj <tuyijie20180708@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ushio = { path = "ushio" }
ushio-geom = {path = "ushio-geom"}
log = "0.4"
log4rs = "1.0"